# compliance_metric

./: README.md
compliance_metrics/: Justfile  pyproject.toml
compliance_metrics/compliance_metrics/: ComplianceMetrics.py  ReportWriter.py  SheetAnalyst.py  SheetCreator.py  jinja2_custom_filters.py  metrics.yaml  models.py  namespace.py  utils.py
compliance_metrics/reports/: .gitignore
compliance_metrics/templates/: _base_report.jinja2  _intro_section.jinja2  _metric_details.jinja2  styling.css
