[tool.poetry]
name = "compliance-metrics"
version = "0.1.0"
description = ""
authors = ["DariiioBeltran <dariiio.beltran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
google-api-python-client = "^2.151.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
gspread = "^6.1.4"
fire = "^0.7.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
numpy = "^2.1.2"
plotly = "^5.24.1"
jinja2 = "^3.1.4"
pdfkit = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
